# try_pybind11

./: README.md  example.cpp
step 1/: CMakeLists.txt  README.md
step 2/: CMakeLists.txt  bind.cpp  compare.py  main.cpp  main.py  matrix.cpp  matrix.h  pymatrix.py
